force-app/main/default/objects/List_View_Status__mdt/List_View_Status__mdt.object-meta.xml
<CustomObject>
    <label>List View Status</label>
    <pluralLabel>List View Statuses</pluralLabel>
</CustomObject>