force-app/main/default/objects/List_View_Status__mdt/fields/Available_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Available_Statuses__c</fullName>
    <label>Available Statuses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>