force-app/main/default/objects/List_View_Status__mdt/fields/Final_Consent__c.field-meta.xml
<CustomField>
    <fullName>Final_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Consent</label>
    <type>Checkbox</type>
</CustomField>