force-app/main/default/objects/List_View_Status__mdt/fields/Initial_Visit__c.field-meta.xml
<CustomField>
    <fullName>Initial_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Visit</label>
    <type>Checkbox</type>
</CustomField>