force-app/main/default/objects/List_View_Status__mdt/fields/Managed_in_SH__c.field-meta.xml
<CustomField>
    <fullName>Managed_in_SH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed in SH</label>
    <type>Checkbox</type>
</CustomField>