force-app/main/default/objects/List_View_Status__mdt/fields/Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status__c</fullName>
    <label>Participant Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>